Enhance exclusions in the JavaModules option